# wasmeval

./: Cargo.toml
examples/: eval.rs  gcd.rs  gcd_fn.rs  hello.rs
misc/: spectest.wasm  spectest.wat
src/: eval.rs  externals.rs  func.rs  global.rs  instance.rs  lib.rs  main.rs  memory.rs  module.rs  table.rs  tests.rs  values.rs
src/eval/: bytecode.rs  context.rs  f32.rs  f64.rs  floats.rs  mod.rs  stack.rs
