[package]
name = "wasmeval"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmparser = "0.39.2"
failure = "0.1.5"

[dev-dependencies]
wabt = "0.9.2"
