[package]
name = "wasmeval"
version = "0.1.2"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
wasmparser = "0.62.0"
anyhow = "1.0"

[dev-dependencies]
wabt = "0.9.2"
